--- a/httpd-php/docker-compose.yml
+++ b/httpd-php/docker-compose.yml
@@ -16,7 +16,7 @@ services:
        MYSQL_PASSWORD: abc@123
      networks:
        - net-local
-         # ipv4_address: 172.18.1.3 # set static ip
+         # ipv4_address: 172.18.0.3 # set static ip
 
 # Run httpd-php from build Dockerfile
   httpd-php:
@@ -28,9 +28,9 @@ services:
      restart: always
      networks:
        - net-local
-         # ipv4_address: 172.18.1.2 # set static ip
+         # ipv4_address: 172.18.0.2 # set static ip
        - net-pro
-         # ipv4_address: 172.17.1.2 # set static ip
+         # ipv4_address: 172.17.0.2 # set static ip
 
 # Run phpmyadmin from image   
   phpmyadmin:
@@ -43,14 +43,14 @@ services:
        MYSQL_ROOT_PASSWORD: abc.123
      networks:
        - net-local
-       # ipv4_address: 172.18.1.4 # set static ip
+       # ipv4_address: 172.18.0.4 # set static ip
        
 # Run cache redis from image      
   redis:
      image: redis
      networks:
        - net-local
-         # ipv4_address: 172.18.1.5 # set static ip
+         # ipv4_address: 172.18.0.5 # set static ip
      port:
        - "6379"
 
@@ -64,20 +64,20 @@ networks:
        driver: bridge
        config:
          - subnet: 172.18.0.0/16
-           ip_range: 172.18.5.0/24
-           gateway: 172.18.5.254
+           #ip_range: 172.18.5.0/24
+           #gateway: 172.18.5.254
            aux_addresses:
-             httpd-php: 172.18.1.2
-             db: 172.18.1.3
-             phpmyadmin: 172.18.1.4
-             redis: 172.18.1.5
+             httpd-php: 172.18.0.2
+             db: 172.18.0.3
+             phpmyadmin: 172.18.0.4
+             redis: 172.18.0.5
              
   net-pro:
        driver: bridge
        config:
          - subnet: 172.17.0.0/16
-           ip_range: 172.17.5.0/24
-           gateway: 172.17.5.254
+           #ip_range: 172.17.5.0/24
+           #gateway: 172.17.5.254
            aux_addresses:
-             httpd-php: 172.17.1.2
+             httpd-php: 172.17.0.2
 
