--- a/httpd-php/docker-compose.yml
+++ b/httpd-php/docker-compose.yml
@@ -1,10 +1,8 @@
-# Docker compose version
-version: "3"
+version: "3"                              #Docker compose version
 
-# Docker compose services
-services:
-# Run mysql db from image
-  db:
+services:                                 #Docker compose services
+
+  db:                                     #Run mysql db from image
      image: mysql:5.7
      volumes:
        - db_data: /var/lib/mysql
@@ -16,10 +14,9 @@ services:
        MYSQL_PASSWORD: abc@123
      networks:
        - net-local
-         # ipv4_address: 172.18.0.3 # set static ip
+         #ipv4_address: 172.18.0.3    #Set static ip
 
-# Run httpd-php from build Dockerfile
-  httpd-php:
+  httpd-php:                          #Run httpd-php from build Dockerfile
      depends_on:
        - db
      build: .
@@ -28,12 +25,11 @@ services:
      restart: always
      networks:
        - net-local
-         # ipv4_address: 172.18.0.2 # set static ip
+         #ipv4_address: 172.18.0.2    #Set static ip
        - net-pro
-         # ipv4_address: 172.17.0.2 # set static ip
-
-# Run phpmyadmin from image   
-  phpmyadmin:
+         #ipv4_address: 172.17.0.2    #Set static ip
+  
+  phpmyadmin:                         #Run phpmyadmin from image 
      image: phpmyadmin
      restart: always
      port:
@@ -43,35 +39,38 @@ services:
        MYSQL_ROOT_PASSWORD: abc.123
      networks:
        - net-local
-       # ipv4_address: 172.18.0.4 # set static ip
+       # ipv4_address: 172.18.0.4     #Set static ip
        
-# Run cache redis from image      
-  redis:
+   
+  redis:                              #Run cache redis from image   
      image: redis
      networks:
        - net-local
-         # ipv4_address: 172.18.0.5 # set static ip
+         #ipv4_address: 172.18.0.5    #Set static ip
      port:
        - "6379"
 
-# Create Volumes
-volumes:
+
+volumes:                               #Create Volumes
   db_data: {}
 
-# Create Netowrks
-networks:
-  net-local:
-       driver: bridge
-       config:
-         - subnet: 172.18.0.0/16
-           #ip_range: 172.18.5.0/24
-           #gateway: 172.18.5.254
-           aux_addresses:
+
+networks:                              #Create Netowrks
+  net-local:                           #Specify custom IPAM config
+       driver: bridge                  #Custom IPAM driver, instead of the default.
+       config:                         #A list with zero or more config blocks, each containing any of the following keys:
+         - subnet: 172.18.0.0/16       #Subnet in CIDR format that represents a network segment
+           #ip_range: 172.18.5.0/24    #Range of IPs from which to allocate container IPs
+           #gateway: 172.18.5.254      # IPv4 or IPv6 gateway for the master subnet
+           aux_addresses:              # Auxiliary IPv4 or IPv6 addresses used by Network driver, as a mapping from hostname to IP
              httpd-php: 172.18.0.2
              db: 172.18.0.3
              phpmyadmin: 172.18.0.4
              redis: 172.18.0.5
-             
+       #options:                       #Driver-specific options as a key-value mapping.
+         #foo: bar
+         #baz: "0"     
+         
   net-pro:
        driver: bridge
        config:
