--- a/httpd-php/docker-compose.yml
+++ b/httpd-php/docker-compose.yml
@@ -1,5 +1,36 @@
-version: "3"                              #Docker compose version
+version: '3'                              #Docker compose version
+volumes:                               #Create Volumes
+  db_data: {}
 
+networks:                              #Create Netowrks
+  net-local:                           #Specify custom IPAM config
+    driver: bridge                  #Custom IPAM driver, instead of the default.
+    ipam:
+      driver: default
+      config:                         #A list with zero or more config blocks, each containing any of the following keys:
+        - subnet: 172.18.0.0/24       #Subnet in CIDR format that represents a network segment
+          #ip_range: 172.18.5.0/24    #Range of IPs from which to allocate container IPs
+          #gateway: 172.18.0.1      # IPv4 or IPv6 gateway for the master subnet
+          #aux_addresses:              # Auxiliary IPv4 or IPv6 addresses used by Network driver, as a mapping from hostname to IP
+            #httpd-php: 172.18.0.2
+            #db: 172.18.0.3
+            #phpmyadmin: 172.18.0.4
+            #redis: 172.18.0.5
+      #options:                       #Driver-specific options as a key-value mapping.
+        #foo: bar
+        #baz: "0"     
+         
+  net-pro:
+    driver: bridge
+    ipam:
+      driver: default
+      config:
+        - subnet: 172.17.0.0/24
+          #ip_range: 172.17.5.0/24
+          #gateway: 172.17.0.1
+          #aux_addresses:
+            #httpd-php: 172.17.0.2
+            
 services:                                 #Docker compose services
 
   db:                                     #Run mysql db from image
@@ -64,36 +95,4 @@ services:                                 #Docker compose services
          ipv4_address: 172.18.0.5    #Set static ip
      ports:
        - "6379"
-
-volumes:                               #Create Volumes
-  db_data: {}
-
-networks:                              #Create Netowrks
-  net-local:                           #Specify custom IPAM config
-       driver: bridge                  #Custom IPAM driver, instead of the default.
-       ipam:
-         driver: default
-         config:                         #A list with zero or more config blocks, each containing any of the following keys:
-           - subnet: 172.18.0.0/24       #Subnet in CIDR format that represents a network segment
-             #ip_range: 172.18.5.0/24    #Range of IPs from which to allocate container IPs
-             #gateway: 172.18.0.1      # IPv4 or IPv6 gateway for the master subnet
-             #aux_addresses:              # Auxiliary IPv4 or IPv6 addresses used by Network driver, as a mapping from hostname to IP
-               #httpd-php: 172.18.0.2
-               #db: 172.18.0.3
-               #phpmyadmin: 172.18.0.4
-               #redis: 172.18.0.5
-         #options:                       #Driver-specific options as a key-value mapping.
-           #foo: bar
-           #baz: "0"     
-         
-  net-pro:
-       driver: bridge
-       ipam:
-         driver: default
-         config:
-           - subnet: 172.17.0.0/24
-             #ip_range: 172.17.5.0/24
-             #gateway: 172.17.0.1
-             #aux_addresses:
-               #httpd-php: 172.17.0.2
 
