--- a/httpd-php/docker-compose.yml
+++ b/httpd-php/docker-compose.yml
@@ -1,4 +1,70 @@
 version: '3'                              #Docker compose version
+         
+services:                                 #Docker compose services
+
+  db:                                     #Run mysql db from image
+     container_name: mysql-db
+     image: mysql:5.7
+     healthcheck:
+       test: "exit 0"
+     volumes:
+       - db_data:/var/lib/mysql
+     restart: always
+     environment:
+       MYSQL_ROOT_PASSWORD: abc.123
+       MYSQL_DATABASE: wp-db
+       MYSQL_USER: wp-user
+       MYSQL_PASSWORD: abc@123
+     #command: ifconfig
+     networks:
+       net-local:
+         ipv4_address: 172.18.0.3    #Set static ip
+
+  httpd-php:                          #Run httpd-php from build Dockerfile
+     container_name: web-httpd-php
+     depends_on:
+       db:
+         condition: service_healthy
+     build: .
+       #context: ./dir
+         #dockerfile: Dockerfile-alternate
+         #args:
+           #buildno: 1
+     image: httpd-php:1.0
+     ports:
+       - "8080:80"
+     restart: always
+     #command: ifconfig
+     networks:
+       net-local:
+         ipv4_address: 172.18.0.2    #Set static ip
+       net-pro:
+         ipv4_address: 172.17.0.2    #Set static ip
+  
+  phpmyadmin:                         #Run phpmyadmin from image 
+     container_name: phpmyadmin
+     image: phpmyadmin
+     restart: always
+     ports:
+       - "8181:80"
+     environment:
+       PHA_HOST: db
+       MYSQL_ROOT_PASSWORD: abc.123
+     #command: ifconfig
+     networks:
+       net-local:
+         ipv4_address: 172.18.0.4     #Set static ip
+       
+  redis:                              #Run cache redis from image   
+     container_name: cache-redis
+     image: redis
+     #command: ifconfig
+     networks:
+       net-local:
+         ipv4_address: 172.18.0.5    #Set static ip
+     ports:
+       - "6379"
+
 volumes:                               #Create Volumes
   db_data: {}
 
@@ -6,7 +72,6 @@ networks:                              #Create Netowrks
   net-local:                           #Specify custom IPAM config
     driver: bridge                  #Custom IPAM driver, instead of the default.
     ipam:
-      driver: default
       config:                         #A list with zero or more config blocks, each containing any of the following keys:
         - subnet: 172.18.0.0/24       #Subnet in CIDR format that represents a network segment
           #ip_range: 172.18.5.0/24    #Range of IPs from which to allocate container IPs
@@ -23,76 +88,9 @@ networks:                              #Create Netowrks
   net-pro:
     driver: bridge
     ipam:
-      driver: default
       config:
         - subnet: 172.17.0.0/24
           #ip_range: 172.17.5.0/24
           #gateway: 172.17.0.1
           #aux_addresses:
             #httpd-php: 172.17.0.2
-            
-services:                                 #Docker compose services
-
-  db:                                     #Run mysql db from image
-     image: mysql:5.7
-     container_name: mysql-db
-     healthcheck:
-       test: "exit 0"
-     volumes:
-       - db_data:/var/lib/mysql
-     restart: always
-     environment:
-       MYSQL_ROOT_PASSWORD: abc.123
-       MYSQL_DATABASE: wp-db
-       MYSQL_USER: wp-user
-       MYSQL_PASSWORD: abc@123
-     command: ifconfig
-     networks:
-       net-local:
-         ipv4_address: 172.18.0.3    #Set static ip
-
-  httpd-php:                          #Run httpd-php from build Dockerfile
-     depends_on:
-       db:
-         condition: service_healthy
-     build: .
-       #context: ./dir
-         #dockerfile: Dockerfile-alternate
-         #args:
-           #buildno: 1
-     image: httpd-php:1.0
-     container_name: web-httpd-php
-     ports:
-       - "8080:80"
-     restart: always
-     command: ifconfig
-     networks:
-       net-local:
-         ipv4_address: 172.18.0.2    #Set static ip
-       net-pro:
-         ipv4_address: 172.17.0.2    #Set static ip
-  
-  phpmyadmin:                         #Run phpmyadmin from image 
-     image: phpmyadmin
-     container_name: phpmyadmin
-     restart: always
-     ports:
-       - "8181:80"
-     environment:
-       PHA_HOST: db
-       MYSQL_ROOT_PASSWORD: abc.123
-     command: ifconfig
-     networks:
-       net-local:
-         ipv4_address: 172.18.0.4     #Set static ip
-       
-  redis:                              #Run cache redis from image   
-     image: redis
-     container_name: cache-redis
-     command: ifconfig
-     networks:
-       net-local:
-         ipv4_address: 172.18.0.5    #Set static ip
-     ports:
-       - "6379"
-
