--- a/httpd-php/docker-compose.yml
+++ b/httpd-php/docker-compose.yml
@@ -23,8 +23,8 @@ services:                                 #Docker compose services
   httpd-php:                          #Run httpd-php from build Dockerfile
      container_name: web-httpd-php
      depends_on:
-       db:
-         condition: service_healthy
+       - db
+         #condition: service_healthy
      build: .
        #context: ./dir
          #dockerfile: Dockerfile-alternate
