--- a/k8s-resource/rc-hello-kube.yml
+++ b/k8s-resource/rc-hello-kube.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ReplicationController
 metadata:
-  name: hello-rc
+  name: rc-hello-kube
 spec:
   replicas: 2 # number of the pod
   selector: # The pod selector determining what pods the RC is operating on
